2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scale_trough):
	Fixed a small bug on the scale gradient.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_scale_draw_gradient),
	(murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_scale_draw_gradient),
	(murrine_rgba_draw_scale_trough):
	Added a small lightborder inside the scale gradient.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed previous commit.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Added progressbarstyle = 2 (cells).

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	Removed duplicated and unused options.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed a bug when the progressbar is really small.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_scrollbar_stepper):
	Always clip with roundness = 0 or 1.
	This could be slower with roundness = 0 or 1:
	please TEST and tell me if there is a performance regression.

2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_trough),
	(murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_progressbar_fill):