@@ -1,5 +1,13 @@
 2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_progressbar_trough),
+	(murrine_draw_progressbar_fill):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_trough),
+	(murrine_rgba_draw_progressbar_fill):
+	Should fix roundness bugs on very small progressbar.
+
+2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_draw.c (murrine_draw_scale_trough):
 	* src/murrine_draw_rgba.c (murrine_rgba_draw_scale_trough):
 	Fixed a small bug on the scale gradient.
